src/theme/main.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}
body {
    line-height: 1;
    padding: env(safe-area-inset-top, 0) env(safe-area-inset-right, 0) env(safe-area-inset-bottom, 0)
        env(safe-area-inset-left, 0);
    overflow-x: hidden !important;
    overflow-y: auto !important;
    padding-right: 0 !important;
}
ol,
ul {
    list-style: none;
}
blockquote,
q {
    quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

@font-face {
    font-family: 'Titillium Web';
    src: local('Titillium Web'), url(../assets/fonts/TitilliumWeb/TitilliumWeb-Regular.ttf) format('truetype');
}

@font-face {
    font-family: 'Open Sans';
    src: local('Open Sans'), url(../assets/fonts/OpenSans/OpenSans-Regular.ttf) format('truetype');
}

@font-face {
    font-family: 'Inter';
    src: local('Inter'), url(../assets/fonts/Inter/Inter-Regular.ttf) format('truetype');
}

* {
    box-sizing: border-box;
    font-family: 'Titillium Web' !important;
    font-style: normal;
    -webkit-tap-highlight-color: transparent;
    scrollbar-color: #355dff #04045a;
    scrollbar-width: thin;
}

*::-webkit-scrollbar {
    width: 10px;
}
*::-webkit-scrollbar-track {
    background: #04045a;
}
*::-webkit-scrollbar-thumb {
    border-radius: 15px;
    background: #355dff;
}
*::-webkit-scrollbar-thumb:active {
    background: #44e1e2;
}
*::-webkit-scrollbar-thumb:hover {
    background: rgb(67, 116, 255);
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type='number'] {
    -moz-appearance: textfield; /* Firefox */
}

#root {
    overflow: hidden;
    --sat: env(safe-area-inset-top);
    --sar: env(safe-area-inset-right);
    --sab: env(safe-area-inset-bottom);
    --sal: env(safe-area-inset-left);
}

a {
    text-decoration: none;
}

@import './overrides.css';
@import './text.css';
@import './colors.css';
@import './datepicker.css';
@import './hero.css';
@import './medias/market-options.css';
@import './medias/landing-page.css';

